@@ -9,6 +9,7 @@
 #ifndef _VECTOR_HPP_
 #define _VECTOR_HPP_
 
+#include <cassert>
 #include <cmath>
 
 #if USE_DOUBLE
@@ -22,45 +23,49 @@ typedef FLOATING_TYPE Scalar;
 class Vector3
 {
 private:
-    Scalar x, y, z;
+    Scalar x[3];
 
 public:
     Vector3()
-        :x(0), y(0), z(0)
+        :x{0, 0, 0}
     {
     }
-    Vector3(const Scalar x, const Scalar y, const Scalar z)
-        :x(x), y(y), z(z)
+    Vector3(const Scalar x0, const Scalar x1, const Scalar x2)
+        :x{x0, x1, x2}
     {
     }
     Vector3(const Vector3& v)
-        :x(v.x), y(v.y), z(v.z)
+        :x{v.x[0], v.x[1], v.x[2]}
     {
     }
     Vector3& operator=(const Vector3& v)
     {
-        x = v.x;
-        y = v.y;
-        z = v.z;
+        x[0] = v.x[0];
+        x[1] = v.x[1];
+        x[2] = v.x[2];
         return *this;
     }
 
     Scalar& operator()(const unsigned char index)
     {
-        return *(&x + index);
+        assert(index >= 0);
+        assert(index < 3);
+        return x[index];
     }
     const Scalar& operator()(const unsigned char index) const
     {
-        return *(&x + index);
+        assert(index >= 0);
+        assert(index < 3);
+        return x[index];
     }
     bool operator==(const Vector3& v) const
     {
-        return (x == v.x) && (y == v.y) && (z == v.z);
+        return (x[0] == v.x[0]) && (x[1] == v.x[1]) && (x[2] == v.x[2]);
     }
 
     Scalar squaredNorm() const
     {
-        return (x*x) + (y*y) + (z*z);
+        return (x[0]*x[0]) + (x[1]*x[1]) + (x[2]*x[2]);
     }
     Scalar norm() const
     {
@@ -68,38 +73,65 @@ public:
     }
     Scalar dot(const Vector3& v) const
     {
-        return (x*v.x) + (y*v.y) + (z*v.z);
+        return (x[0]*v.x[0]) + (x[1]*v.x[1]) + (x[2]*v.x[2]);
     }
     void setZero()
     {
-        x = 0;
-        y = 0;
-        z = 0;
+        x[0] = 0;
+        x[1] = 0;
+        x[2] = 0;
     }
 
     void operator*=(const Scalar s)
     {
-        x *= s;
-        y *= s;
-        z *= s;
+        x[0] *= s;
+        x[1] *= s;
+        x[2] *= s;
     }
     void operator/=(const Scalar s)
     {
-        x /= s;
-        y /= s;
-        z /= s;
+        x[0] /= s;
+        x[1] /= s;
+        x[2] /= s;
     }
     void operator+=(const Vector3& v)
     {
-        x += v.x;
-        y += v.y;
-        z += v.z;
+        x[0] += v.x[0];
+        x[1] += v.x[1];
+        x[2] += v.x[2];
     }
     void operator-=(const Vector3& v)
     {
-        x -= v.x;
-        y -= v.y;
-        z -= v.z;
+        x[0] -= v.x[0];
+        x[1] -= v.x[1];
+        x[2] -= v.x[2];
+    }
+
+    void set_ax(const Scalar s, const Vector3& v)
+    {
+        x[0] = s*v.x[0];
+        x[1] = s*v.x[1];
+        x[2] = s*v.x[2];
+    }
+    void add_ax(const Scalar s, const Vector3& v)
+    {
+        x[0] += s*v.x[0];
+        x[1] += s*v.x[1];
+        x[2] += s*v.x[2];
+    }
+    void set_axpy(const Scalar s, const Vector3& v, const Vector3& v2)
+    {
+        x[0] = s*v.x[0] + v2.x[0];
+        x[1] = s*v.x[1] + v2.x[1];
+        x[2] = s*v.x[2] + v2.x[2];
+    }
+
+    Scalar distance(const Vector3& v) const
+    {
+        const Scalar dx0 = x[0]-v.x[0];
+        const Scalar dx1 = x[1]-v.x[1];
+        const Scalar dx2 = x[2]-v.x[2];
+        return std::sqrt(dx0*dx0 + dx1*dx1 + dx2*dx2);
     }
 };
 
