@@ -37,6 +37,7 @@
 * Fixed wrong acceleration calculation.
 * Added many sphere tests to Benchmark.
 * Improved Benchmark by removing all spheres at once.
+* Improved Vector class to make it more usable.
 
 SphereSim 3.0.2:
 * Fixed Viewer linking.
